# DOCR

./: README.md  __init__.py  __main__.py  guide.txt  img_libs.py  importer.py  main.py  pkg_installer.py  pyproject.toml  replit.nix  test_download.sh  test_script.sh  격자.py
BasicLibs/: README.md
DOCR/: README.md
DOCR/docr2txt/: README.md
DOCR/img2txt2docr/: README.md
img2txt/: .WindowsInstallerUrl.txt  .tesseract_path.txt  MyOsOption.py  README.md  TesseractWindowsUrl.py  __init__.py  guide.txt  img.txt  img_libs.py  importer.py  lib.py  mains.py  make_default_not_dev.py  my_os_option.py  opener.py  option.py  pkg_installer.py  prelib.py  tesseract_installer.py  test_download.bat  test_download.sh  test_script.bat
img2txt/pkgs/: Pillow-10.0.1-cp310-cp310-manylinux_2_28_x86_64.whl
